Adds missing files.

--- a/src/main/resources/documentation/index.html
+++ b/src/main/resources/documentation/index.html
@@ -813,7 +813,7 @@ margin-bottom: 20px;
     },
     "flagType" : {
       "description" : "Type of flag to be used.",
-      "$ref" : "#/definitions/Cell"
+      "$ref" : "#/definitions/CellFlag"
     }
   }
 };
@@ -960,7 +960,7 @@ margin-bottom: 20px;
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Games-gamesGameIdCellsFlagPatch-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X PATCH "http://155.138.208.11/v1/games/{gameId}/cells/flag"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X PATCH "https://virtserver.swaggerhub.com/santiago.zuleta/minesweeper-api/1.0.0/games/{gameId}/cells/flag"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-Games-gamesGameIdCellsFlagPatch-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -1357,7 +1357,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Games-gamesGameIdCellsRevealPatch-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X PATCH "http://155.138.208.11/v1/games/{gameId}/cells/reveal"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X PATCH "https://virtserver.swaggerhub.com/santiago.zuleta/minesweeper-api/1.0.0/games/{gameId}/cells/reveal"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-Games-gamesGameIdCellsRevealPatch-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -1754,7 +1754,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Games-gamesGameIdGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "http://155.138.208.11/v1/games/{gameId}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://virtserver.swaggerhub.com/santiago.zuleta/minesweeper-api/1.0.0/games/{gameId}"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-Games-gamesGameIdGet-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -2099,7 +2099,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Games-gamesGameIdPausePatch-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X PATCH "http://155.138.208.11/v1/games/{gameId}/pause"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X PATCH "https://virtserver.swaggerhub.com/santiago.zuleta/minesweeper-api/1.0.0/games/{gameId}/pause"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-Games-gamesGameIdPausePatch-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -2444,7 +2444,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Games-gamesPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X POST "http://155.138.208.11/v1/games"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X POST "https://virtserver.swaggerhub.com/santiago.zuleta/minesweeper-api/1.0.0/games"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-Games-gamesPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -2804,7 +2804,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Users-usersPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X POST "http://155.138.208.11/v1/users"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X POST "https://virtserver.swaggerhub.com/santiago.zuleta/minesweeper-api/1.0.0/users"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-Users-usersPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
